# codetask-master

./: Makefile  README.md  courses.csv  docker-compose.yaml  manage.py  providers.csv  pyproject.toml  requirements.txt  task.md
codetask/: apps.py  asgi.py  settings.py  urls.py  wsgi.py
codetask/management/commands/: import_data.py
courses_api/: admin.py  models.py  tests.py  urls.py  views.py
courses_api/migrations/: 0001_initial.py
courses_api/static/css/: style.css
courses_api/templates/: course_detail.html  course_list.html  home.html  provider_detail.html
